# imgui-painter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt  imgui.cmake  stb.cmake  tinyfiledialogs.cmake
include/: Brush.hpp  Canvas.hpp  Image_IO.hpp  Interface.hpp  Layer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  main.hpp
shaders/: framebuffer.fs  framebuffer.vs  quad.fs  quad.vs  quad_array.fs  quad_single.fs  triangle.fs  triangle.vs
src/: Brush.cpp  Canvas.cpp  Image_IO.cpp  Interface.cpp  Layer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  main.cpp
